--- a/src/index.css
+++ b/src/index.css
@@ -7,23 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   padding-bottom: 1000px;
 }
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
-button, input, textarea, select{
-  color: inherit;
-  font: inherit;
-}
-button{
-  cursor: pointer;
-}
-
-.container{
-  width: 100%;
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 0 15px;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
